--- a/GUISupport/Qt/CMakeLists.txt
+++ b/GUISupport/Qt/CMakeLists.txt
@@ -135,7 +135,7 @@ INCLUDE(${QT_USE_FILE})
 
 QT4_WRAP_CPP(QVTKLibMocSrcs ${QVTKMocHeaders})
 
-ADD_LIBRARY(QVTK ${QVTKLibSrcs} ${QVTKLibMocSrcs})
+VTK_ADD_LIBRARY(QVTK ${QVTKLibSrcs} ${QVTKLibMocSrcs})
 # Add target specific compile flags for ABI setttings
 IF(VTK_ABI_CXX_FLAGS)
   SET_PROPERTY(TARGET QVTK APPEND PROPERTY COMPILE_FLAGS "${VTK_ABI_CXX_FLAGS}")
@@ -214,7 +214,7 @@ if(VTK_WRAP_PYTHON_SIP)
   ENDIF(VTK_QT_USE_WEBKIT)
 
   VTK_WRAP_PYTHON3(vtkQtPython QVTK_PythonSrcs "${QVTK_PythonHeaders}")
-  ADD_LIBRARY(vtkQtPythonD ${QVTK_PythonSrcs})
+  VTK_ADD_LIBRARY(vtkQtPythonD ${QVTK_PythonSrcs})
   TARGET_LINK_LIBRARIES(vtkQtPythonD QVTK vtkViewsPythonD vtkRenderingPythonD vtkPythonCore)
 
   PYTHON_ADD_MODULE(vtkQtPython vtkQtPythonInit.cxx)
@@ -301,7 +301,7 @@ if(VTK_WRAP_PYTHON_SIP)
   # create the sip module
   include_directories(${SIP_INCLUDE_DIR})
   include_directories("${PYTHON_INCLUDE_PATH}")
-  add_library(${SIP_MODULE} MODULE ${SIP_OUT} ${SIP_FILES})
+  VTK_ADD_LIBRARY(${SIP_MODULE} MODULE ${SIP_OUT} ${SIP_FILES})
   target_link_libraries(${SIP_MODULE} QVTK vtkRenderingPythonD)
   set_target_properties(${SIP_MODULE} PROPERTIES PREFIX "")
   IF(WIN32 AND NOT CYGWIN)
@@ -317,11 +317,13 @@ if(VTK_WRAP_PYTHON_SIP)
 
   IF(NOT VTK_INSTALL_NO_LIBRARIES)
     INSTALL(TARGETS vtkQtPythonD
+      EXPORT ${VTK_INSTALL_EXPORT_NAME}
       RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
       LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
       ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
     IF(VTK_INSTALL_PYTHON_USING_CMAKE)
       INSTALL(TARGETS vtkQtPython QVTKPython
+        EXPORT ${VTK_INSTALL_EXPORT_NAME}
         RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
         LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
         ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
@@ -355,7 +357,7 @@ IF(BUILD_SHARED_LIBS)
 
   # add QVTK plugin from sources
   # stand-alone as it doesn't depend on QVTK library
-  ADD_LIBRARY ( QVTKWidgetPlugin
+  VTK_ADD_LIBRARY ( QVTKWidgetPlugin
     SHARED
     ${PluginLibSrcs}
     ${PluginMocSrcs}
@@ -425,6 +427,7 @@ ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS QVTK
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
