--- a/GUISupport/Qt/Chart/CMakeLists.txt
+++ b/GUISupport/Qt/Chart/CMakeLists.txt
@@ -300,7 +300,7 @@ SET_DIRECTORY_PROPERTIES(PROPERTIES INCLUDE_DIRECTORIES "${include_dirs_tmp}")
     "${CMAKE_CURRENT_BINARY_DIR}/vtkQtChartExport.h"
     )
 
-  ADD_LIBRARY(vtkQtChart
+  VTK_ADD_LIBRARY(vtkQtChart
     ${vtkQtChart_SOURCES}
     ${vtkQtChart_HEADERS}
     ${vtkQtChart_MOC_SOURCES}
@@ -322,6 +322,7 @@ SET_DIRECTORY_PROPERTIES(PROPERTIES INCLUDE_DIRECTORIES "${include_dirs_tmp}")
 
   IF(NOT VTK_INSTALL_NO_LIBRARIES AND VTK_INSTALL_BIN_DIR_CM24 AND VTK_INSTALL_LIB_DIR_CM24)
     INSTALL(TARGETS vtkQtChart
+      EXPORT ${VTK_INSTALL_EXPORT_NAME}
       RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
       LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
       ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
