--- a/Utilities/EncodeString/CMakeLists.txt
+++ b/Utilities/EncodeString/CMakeLists.txt
@@ -8,13 +8,14 @@
 #
 
 IF(NOT CMAKE_CROSSCOMPILING)
-  ADD_EXECUTABLE(vtkEncodeString vtkEncodeString.cxx)
+  VTK_ADD_EXECUTABLE(vtkEncodeString vtkEncodeString.cxx)
   EXPORT(TARGETS vtkEncodeString FILE ${EXPORT_EXECUTABLES_FILE} NAMESPACE "${EXPORT_EXECUTABLES_NAMESPACE}" APPEND) 
   IF(COMPILE_TOOLS_TARGET)
     ADD_DEPENDENCIES(${COMPILE_TOOLS_TARGET} vtkEncodeString)
   ENDIF(COMPILE_TOOLS_TARGET)
   IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
     INSTALL(TARGETS vtkEncodeString
+      EXPORT ${VTK_INSTALL_EXPORT_NAME}
       RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT Development
       )
   ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
