--- a/Utilities/vtkoggtheora/CMakeLists.txt
+++ b/Utilities/vtkoggtheora/CMakeLists.txt
@@ -248,7 +248,7 @@ ENDIF(MSVC)
 
 ADD_DEFINITIONS(-DHAVE_CONFIG_H)
 
-ADD_LIBRARY(vtkoggtheora ${VTKOGGTHEORA_SRCS})
+VTK_ADD_LIBRARY(vtkoggtheora ${VTKOGGTHEORA_SRCS})
 
 # Apply user-defined properties to the library target.
 IF(VTK_LIBRARY_PROPERTIES)
@@ -258,6 +258,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtkoggtheora
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
