--- a/Utilities/vtksqlite/CMakeLists.txt
+++ b/Utilities/vtksqlite/CMakeLists.txt
@@ -28,14 +28,14 @@ INCLUDE_DIRECTORIES( ${VTKSQLite_SOURCE_DIR}/Utilities/vtksqlite )
 # Windows.
 
 IF (WIN32)
-  ADD_LIBRARY( vtksqlite STATIC ${SQLite_SRCS} )
+  VTK_ADD_LIBRARY( vtksqlite STATIC ${SQLite_SRCS} )
 ELSE (WIN32)
   INCLUDE(CheckIncludeFiles)
   CHECK_INCLUDE_FILES("pthread.h"        HAVE_PTHREAD_H)
   IF(HAVE_PTHREAD_H AND CMAKE_USE_PTHREADS)
     ADD_DEFINITIONS(-DHAVE_PTHREAD_H)
   ENDIF(HAVE_PTHREAD_H AND CMAKE_USE_PTHREADS)
-  ADD_LIBRARY( vtksqlite ${SQLite_SRCS} )
+  VTK_ADD_LIBRARY( vtksqlite ${SQLite_SRCS} )
   IF (UNIX AND HAVE_PTHREAD_H AND CMAKE_USE_PTHREADS)
     TARGET_LINK_LIBRARIES(vtksqlite ${CMAKE_THREAD_LIBS})
   ENDIF (UNIX AND HAVE_PTHREAD_H AND CMAKE_USE_PTHREADS)
@@ -47,6 +47,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtksqlite
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
