--- a/Utilities/vtktiff/CMakeLists.txt
+++ b/Utilities/vtktiff/CMakeLists.txt
@@ -111,7 +111,7 @@ CONFIGURE_FILE(${VTKTIFF_SOURCE_DIR}/tiffDllConfig.h.in
 CONFIGURE_FILE(${VTKTIFF_SOURCE_DIR}/tif_config.h.in
   ${VTKTIFF_BINARY_DIR}/tif_config.h)
 
-ADD_LIBRARY(vtktiff ${common_SRCS})
+VTK_ADD_LIBRARY(vtktiff ${common_SRCS})
 TARGET_LINK_LIBRARIES( vtktiff ${VTK_ZLIB_LIBRARIES} ${VTK_JPEG_LIBRARIES} )
 
 # link against the math library
@@ -126,6 +126,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtktiff
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
