--- a/Wrapping/Tcl/CMakeLists.txt
+++ b/Wrapping/Tcl/CMakeLists.txt
@@ -51,7 +51,7 @@ IF (WIN32)
 ENDIF (WIN32)
 
 # Create the vtk Tcl wrapper executable.
-ADD_EXECUTABLE(vtk vtkTkAppInit.cxx ${VTK_EXE_RESOURCE_FILES})
+VTK_ADD_EXECUTABLE(vtk vtkTkAppInit.cxx ${VTK_EXE_RESOURCE_FILES})
 TARGET_LINK_LIBRARIES (vtk
   vtkCommonTCL
   vtkFilteringTCL
@@ -110,6 +110,7 @@ SET(VTK_TCL_INSTALL_DIR_CM24 ${VTK_INSTALL_TCL_DIR_CM24}/tcl)
 
 IF(NOT VTK_INSTALL_NO_RUNTIME)
   INSTALL(TARGETS vtk
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeExecutables # .exe, .dll
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries # .so, mod.dll
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development      # .a, .lib
@@ -127,7 +128,7 @@ IF (VTK_USE_PARALLEL)
       SET(MPI_LIBRARIES ${MPI_LIBRARIES} "${MPI_EXTRA_LIBRARY}")   
     ENDIF (MPI_EXTRA_LIBRARY) 
     
-    ADD_EXECUTABLE(pvtk vtkParaTkAppInit.cxx ${VTK_EXE_RESOURCE_FILES})
+    VTK_ADD_EXECUTABLE(pvtk vtkParaTkAppInit.cxx ${VTK_EXE_RESOURCE_FILES})
     IF(VTK_USE_CARBON)
       FIND_PROGRAM(VTK_APPLE_RESOURCE Rez /Developer/Tools)
       IF(VTK_APPLE_RESOURCE)
@@ -170,6 +171,7 @@ IF (VTK_USE_PARALLEL)
 
     IF(NOT VTK_INSTALL_NO_RUNTIME)
       INSTALL(TARGETS pvtk
+        EXPORT ${VTK_INSTALL_EXPORT_NAME}
         RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeExecutables # .exe, .dll
         LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries # .so, mod.dll
         ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development      # .a, .lib
