--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -826,7 +826,7 @@ IF (VTK_WRAP_PYTHON AND VTK_USE_TK AND TK_FOUND)
         vtkCocoaTkUtilities.mm)
   ENDIF (VTK_USE_COCOA)
 
-  ADD_LIBRARY(vtkRenderingPythonTkWidgets SHARED
+  VTK_ADD_LIBRARY(vtkRenderingPythonTkWidgets SHARED
               ${RenderingPythonTkWidgets_SRCS})
   SET(VTK_PYTHONTK_LIBRARIES ${VTK_TK_LIBRARIES})
   IF(VTK_USE_X)
@@ -848,6 +848,7 @@ IF (VTK_WRAP_PYTHON AND VTK_USE_TK AND TK_FOUND)
 
   IF(NOT VTK_INSTALL_NO_LIBRARIES)
     INSTALL(TARGETS vtkRenderingPythonTkWidgets
+      EXPORT ${VTK_INSTALL_EXPORT_NAME}
       RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
       LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
       ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
