--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Build kwsys
 ADD_SUBDIRECTORY(kwsys)
+SET_PROPERTY(GLOBAL APPEND PROPERTY VTK_TARGETS vtksys)
 
 # Build third-party utilities.
 
@@ -38,6 +39,7 @@ ADD_SUBDIRECTORY(verdict)
 ADD_SUBDIRECTORY(vtknetcdf)
 IF(VTK_USE_METAIO)
   ADD_SUBDIRECTORY(vtkmetaio)
+  SET_PROPERTY(GLOBAL APPEND PROPERTY VTK_TARGETS vtkmetaio)
 ENDIF(VTK_USE_METAIO)
 ADD_SUBDIRECTORY(vtksqlite)
 
