--- a/Utilities/Cosmo/CMakeLists.txt
+++ b/Utilities/Cosmo/CMakeLists.txt
@@ -34,11 +34,12 @@ SET(Cosmo_SOURCES
 
 INCLUDE_DIRECTORIES (${Cosmo_SOURCE_DIR} ${Cosmo_BINARY_DIR})
 
-ADD_LIBRARY(Cosmo ${Cosmo_SOURCES})
+VTK_ADD_LIBRARY(Cosmo ${Cosmo_SOURCES})
 TARGET_LINK_LIBRARIES(Cosmo vtksys vtkCommon ${Cosmo_LIBS})
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS Cosmo
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
