--- a/Utilities/ftgl/CMakeLists.txt
+++ b/Utilities/ftgl/CMakeLists.txt
@@ -148,7 +148,7 @@ SET (VTKFTGL_LIBS "${VTKFTGL_LIBS};${VTK_FREETYPE_LIBRARIES}")
 #
 # Define the library (and install it)
 #
-ADD_LIBRARY (vtkftgl ${FTGL_SRCS})
+VTK_ADD_LIBRARY (vtkftgl ${FTGL_SRCS})
 TARGET_LINK_LIBRARIES(vtkftgl ${VTKFTGL_LIBS})
 
 # Apply user-defined properties to the library target.
@@ -158,6 +158,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtkftgl
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
