--- a/Utilities/mrmpi/mpistubs/CMakeLists.txt
+++ b/Utilities/mrmpi/mpistubs/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET (mpistubs_SOURCES mpi.cpp)
 
-ADD_LIBRARY (mpistubs ${mpistubs_SOURCES})
+VTK_ADD_LIBRARY (mpistubs ${mpistubs_SOURCES})
 TARGET_LINK_LIBRARIES (mpistubs vtksys)
 IF(VTK_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(mpistubs PROPERTIES ${VTK_LIBRARY_PROPERTIES})
@@ -8,6 +8,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS mpistubs
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
