--- a/Utilities/mrmpi/src/CMakeLists.txt
+++ b/Utilities/mrmpi/src/CMakeLists.txt
@@ -7,7 +7,7 @@ SET (mrmpi_SOURCES
         memory.cpp
         error.cpp)
 
-ADD_LIBRARY (MapReduceMPI ${mrmpi_SOURCES})
+VTK_ADD_LIBRARY (MapReduceMPI ${mrmpi_SOURCES})
 TARGET_LINK_LIBRARIES (MapReduceMPI ${mrmpi_LIBS})
 IF(VTK_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(MapReduceMPI PROPERTIES ${VTK_LIBRARY_PROPERTIES})
@@ -15,6 +15,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS MapReduceMPI
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
