--- a/Utilities/vtkexpat/CMakeLists.txt
+++ b/Utilities/vtkexpat/CMakeLists.txt
@@ -22,7 +22,7 @@ CONFIGURE_FILE(${VTKEXPAT_SOURCE_DIR}/expatDllConfig.h.in
 CONFIGURE_FILE(${VTKEXPAT_SOURCE_DIR}/.NoDartCoverage
                ${VTKEXPAT_BINARY_DIR}/.NoDartCoverage)
 
-ADD_LIBRARY(vtkexpat ${expat_SRCS})
+VTK_ADD_LIBRARY(vtkexpat ${expat_SRCS})
 
 # Apply user-defined properties to the library target.
 IF(VTK_LIBRARY_PROPERTIES)
@@ -31,6 +31,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtkexpat
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
