--- a/Utilities/vtklibproj4/CMakeLists.txt
+++ b/Utilities/vtklibproj4/CMakeLists.txt
@@ -180,7 +180,7 @@ set( LP4_SRCS
 #------------------------------------------------------------------------------
 # Executable and library targets
 
-add_library( vtkproj4
+vtk_add_library( vtkproj4
   ${LP4_SRCS}
 )
 
@@ -231,7 +231,8 @@ endif(VTK_LIBRARY_PROPERTIES)
 # Install targets
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
-  INSTALL(TARGETS vtkproj4 lproj
+  INSTALL(TARGETS vtkproj4
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
