--- a/Utilities/vtklibxml2/CMakeLists.txt
+++ b/Utilities/vtklibxml2/CMakeLists.txt
@@ -295,7 +295,7 @@ INCLUDE_DIRECTORIES(BEFORE ${vtklibxml2_BINARY_DIR})
 IF(NOT BUILD_SHARED_LIBS)
   ADD_DEFINITIONS(-DLIBXML_STATIC)
 ENDIF(NOT BUILD_SHARED_LIBS)
-ADD_LIBRARY(vtklibxml2 ${vtklibxml2_la_SOURCES})
+VTK_ADD_LIBRARY(vtklibxml2 ${vtklibxml2_la_SOURCES})
 TARGET_LINK_LIBRARIES(vtklibxml2 ${LIBXML2_LIBS})
 
 # Apply user-defined properties to the library target.
@@ -305,6 +305,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtklibxml2
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
