--- a/Utilities/vtknetcdf/CMakeLists.txt
+++ b/Utilities/vtknetcdf/CMakeLists.txt
@@ -286,10 +286,10 @@ IF (NETCDF_DISABLE_COMPILER_WARNINGS)
   ENDIF ()
 ENDIF (NETCDF_DISABLE_COMPILER_WARNINGS)
 
-ADD_LIBRARY(vtkNetCDF
+VTK_ADD_LIBRARY(vtkNetCDF
   ${netcdf_SRCS})
 
-ADD_LIBRARY(vtkNetCDF_cxx ${netcdfcxx_SRCS})
+VTK_ADD_LIBRARY(vtkNetCDF_cxx ${netcdfcxx_SRCS})
 TARGET_LINK_LIBRARIES(vtkNetCDF_cxx vtkNetCDF)
 
 # Take care of symbol export/import on Windows
@@ -308,6 +308,7 @@ IF(NOT VTK_INSTALL_NO_LIBRARIES)
     SET(VTK_INSTALL_LIB_DIR_CM24 ${CMAKE_INSTALL_PREFIX}/lib)
   ENDIF(NOT VTK_INSTALL_LIB_DIR_CM24)
   INSTALL(TARGETS vtkNetCDF vtkNetCDF_cxx
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
