--- a/Utilities/vtkpng/CMakeLists.txt
+++ b/Utilities/vtkpng/CMakeLists.txt
@@ -25,7 +25,7 @@ CONFIGURE_FILE(${VTKPNG_SOURCE_DIR}/.NoDartCoverage
 CONFIGURE_FILE(${VTKPNG_SOURCE_DIR}/pngDllConfig.h.in
                ${VTKPNG_BINARY_DIR}/pngDllConfig.h)
 
-ADD_LIBRARY(vtkpng ${PNG_SRCS})
+VTK_ADD_LIBRARY(vtkpng ${PNG_SRCS})
 
 TARGET_LINK_LIBRARIES(vtkpng ${VTK_ZLIB_LIBRARIES})
 
@@ -41,6 +41,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtkpng
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
