--- a/Utilities/vtkzlib/CMakeLists.txt
+++ b/Utilities/vtkzlib/CMakeLists.txt
@@ -29,7 +29,7 @@ CONFIGURE_FILE(${VTKZLIB_SOURCE_DIR}/zlibDllConfig.h.in
                ${VTKZLIB_BINARY_DIR}/zlibDllConfig.h)
 
 
-ADD_LIBRARY(vtkzlib ${ZLIB_SRCS})
+VTK_ADD_LIBRARY(vtkzlib ${ZLIB_SRCS})
 
 # Apply user-defined properties to the library target.
 IF(VTK_LIBRARY_PROPERTIES)
@@ -38,6 +38,7 @@ ENDIF(VTK_LIBRARY_PROPERTIES)
 
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtkzlib
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
