--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -19,10 +19,11 @@ ENDIF(VTK_WRAP_PYTHON_SIP)
 
 INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_PATH}")
 
-ADD_LIBRARY(vtkPythonCore ${VTK_PYTHON_CORE_SRCS})
+VTK_ADD_LIBRARY(vtkPythonCore ${VTK_PYTHON_CORE_SRCS})
 TARGET_LINK_LIBRARIES(vtkPythonCore vtkCommon)
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS vtkPythonCore
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
@@ -81,7 +82,7 @@ INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
 CONFIGURE_FILE(${VTK_SOURCE_DIR}/Wrapping/Python/vtkPythonAppInitConfigure.h.in
                ${VTK_BINARY_DIR}/Wrapping/Python/vtkPythonAppInitConfigure.h)
 
-ADD_EXECUTABLE(vtkpython vtkPythonAppInit.cxx)
+VTK_ADD_EXECUTABLE(vtkpython vtkPythonAppInit.cxx)
 
 SET(VTKPYTHON_LINK_FLAGS)
 SET(VTKPYTHON_LINK_LIBS)
@@ -282,7 +283,7 @@ IF (VTK_USE_PARALLEL AND VTK_USE_MPI)
   ADD_DEFINITIONS("-DMPICH_IGNORE_CXX_SEEK")
 
   SET(PVTKPYTHON_EXECUTABLE pvtkpython)
-  ADD_EXECUTABLE(pvtkpython vtkParaPythonAppInit.cxx)
+  VTK_ADD_EXECUTABLE(pvtkpython vtkParaPythonAppInit.cxx)
   TARGET_LINK_LIBRARIES(pvtkpython ${VTKPYTHON_LINK_LIBS} ${MPI_LIBRARIES})
   IF(VTK_USE_MATLAB_MEX)
     INCLUDE(${MATLAB_MEX_USE_FILE})
@@ -300,6 +301,7 @@ ENDIF (VTK_USE_PARALLEL AND VTK_USE_MPI)
 
 IF(NOT VTK_INSTALL_NO_RUNTIME AND NOT VTK_INSTALL_NO_VTKPYTHON)
   INSTALL(TARGETS vtkpython ${PVTKPYTHON_EXECUTABLE}
+    EXPORT ${VTK_INSTALL_EXPORT_NAME}
     RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeExecutables # .exe, .dll
     LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries # .so, mod.dll
     ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development      # .a, .lib
