ENH: Improvements to the 2D histogram, including legend.
Added a vtkColorLegend class, this is now displayed in a 2D histogram
chart, and uses a vtkAxis to display the scale. There is still some
work to do to get everything laid out correctly. Disabled the test for
now, until the layout and display is working as expected.

Change-Id: Iaa2a47538158d340d2f2c7120bd61d61e179b6cf

--- a/Charts/CMakeLists.txt
+++ b/Charts/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(Kit_SRCS
   vtkChartParallelCoordinates.cxx
   vtkChartXY.cxx
   vtkChartPie.cxx
+  vtkColorLegend.cxx
   vtkPlotPie.cxx
   vtkColor.h
   vtkColorSeries.cxx
