ENH: Add a way to provide additional arguments to the install command such as EXPORT.

--- a/Utilities/vtkmetaio/CMakeLists.txt
+++ b/Utilities/vtkmetaio/CMakeLists.txt
@@ -115,7 +115,14 @@ ENDIF(WIN32)
 
 IF(METAIO_FOR_VTK)
   IF(NOT VTK_INSTALL_NO_LIBRARIES)
+    SET(VTK_INSTALL_RULE_ARGS)
+
+    IF(VTK_INSTALL_EXPORT_NAME)
+       LIST(APPEND VTK_INSTALL_RULE_ARGS EXPORT ${VTK_INSTALL_EXPORT_NAME})
+    ENDIF(VTK_INSTALL_EXPORT_NAME)
+
     INSTALL(TARGETS ${METAIO_NAMESPACE}
+            ${VTK_INSTALL_RULE_ARGS}
             RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} 
                     COMPONENT RuntimeLibraries
             LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} 
