ENH: Split out the OpenGL 2 code from legacy OpenGL.
Decide up front which version of the OpenGL API to use. Split some
functions out into a private header that can be shared. Initially the
OpenGL 2 variant has minimal differences, and falls back to the OpenGL
case when appropriate.

Change-Id: Idc076838702b33b988845d38fb947f5e6612119e

--- a/Charts/CMakeLists.txt
+++ b/Charts/CMakeLists.txt
@@ -46,6 +46,7 @@ SET(Kit_SRCS
   vtkImageItem.cxx
   vtkLookupTableItem.cxx
   vtkOpenGLContextBufferId.cxx
+  vtkOpenGL2ContextDevice2D.cxx
   vtkOpenGLContextDevice2D.cxx
   vtkPen.cxx
   vtkPiecewiseControlPointsItem.cxx
@@ -91,6 +92,7 @@ SET_SOURCE_FILES_PROPERTIES(
   vtkContextMouseEvent
   vtkChartColors
   vtkOpenGLContextBufferId
+  vtkOpenGL2ContextDevice2D
   vtkOpenGLContextDevice2D
   vtkVector
   WRAP_EXCLUDE
