COMP: Mark vtkWrapHierarchy as a cross-compile executable.

--- a/Wrapping/CMakeLists.txt
+++ b/Wrapping/CMakeLists.txt
@@ -16,6 +16,14 @@ IF(NOT CMAKE_CROSSCOMPILING)
   IF (VTK_WRAP_TCL OR VTK_WRAP_PYTHON OR VTK_WRAP_JAVA)
     ADD_EXECUTABLE(vtkWrapHierarchy vtkParse.tab.c vtkParsePreprocess.c
                    vtkWrapHierarchy.c)
+    EXPORT(TARGETS vtkWrapHierarchy FILE ${EXPORT_EXECUTABLES_FILE} NAMESPACE "${EXPORT_EXECUTABLES_NAMESPACE}" APPEND)
+    IF(COMPILE_TOOLS_TARGET)
+      ADD_DEPENDENCIES(${COMPILE_TOOLS_TARGET} vtkWrapHierarchy)
+    ENDIF(COMPILE_TOOLS_TARGET)
+    IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
+      INSTALL(TARGETS vtkWrapHierarchy
+        RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT Development)
+    ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
   ENDIF (VTK_WRAP_TCL OR VTK_WRAP_PYTHON OR VTK_WRAP_JAVA)
 
   IF (VTK_WRAP_TCL)
