BUG 11550: Add tolerance check to FindCell and FindAndGetCell
The FindCell and FindAndGetCell methods used to ignore the
tolerance parameter, and furthermore would sometimes fail if
the point was exactly on the boundary.  This patch includes
a test to ensure image data FindCell tolerances work.

Change-Id: I3c37eecd7eacf76bdc0d962e47438fe7638d4b87

--- a/Filtering/Testing/Cxx/CMakeLists.txt
+++ b/Filtering/Testing/Cxx/CMakeLists.txt
@@ -16,6 +16,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   TestAMRBox.cxx
   TestInterpolationFunctions.cxx
   TestInterpolationDerivs.cxx
+  TestImageDataFindCell.cxx
   TestImageIterator.cxx
   TestGenericCell.cxx
   TestGraph.cxx
