.gitattributes: Specify custom max size for vtk_sqlite3.c
This file has all of the source of sqlite3 combined into one translation
unit.  Specify a custom max size so commits to the file do not hit our
blob size limit check.

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,5 @@ pre-commit       crlf=input
 *.txx            whitespace=tab-in-indent
 *.txt            whitespace=tab-in-indent
 *.cmake          whitespace=tab-in-indent
+
+/Utilities/vtksqlite/vtk_sqlite3.c hooks.MaxObjectKiB=4096
