--- a/VTKConfig.cmake.in
+++ b/VTKConfig.cmake.in
@@ -216,10 +216,8 @@ SET(VTK_INSTALL_PACKAGE_DIR "@VTK_INSTALL_PACKAGE_DIR@")
 SET(VTK_CONFIGURATION_TYPES @VTK_CONFIGURATION_TYPES_CONFIG@)
 SET(VTK_BUILD_TYPE @VTK_BUILD_TYPE_CONFIG@)
 
-# The VTK library dependencies.
-IF(NOT VTK_NO_LIBRARY_DEPENDS AND EXISTS "@VTK_LIBRARY_DEPENDS_FILE@")
-  INCLUDE("@VTK_LIBRARY_DEPENDS_FILE@")
-ENDIF(NOT VTK_NO_LIBRARY_DEPENDS AND EXISTS "@VTK_LIBRARY_DEPENDS_FILE@")
+# The VTK targets.
+INCLUDE("@VTK_TARGETS_FILE@")
 
 # The old, less clear name for VTK_RUNTIME_LIBRARY_DIRS.  Kept here
 # for compatibility.
