Fixes so ParaView can properly overide VTK's exports.

--- a/VTKConfig.cmake.in
+++ b/VTKConfig.cmake.in
@@ -216,8 +216,10 @@ SET(VTK_INSTALL_PACKAGE_DIR "@VTK_INSTALL_PACKAGE_DIR@")
 SET(VTK_CONFIGURATION_TYPES @VTK_CONFIGURATION_TYPES_CONFIG@)
 SET(VTK_BUILD_TYPE @VTK_BUILD_TYPE_CONFIG@)
 
-# The VTK targets.
-INCLUDE("@VTK_TARGETS_FILE@")
+# The VTK targets file.
+IF(NOT VTK_INSTALL_EXPORT_NAME AND EXISTS "@VTK_INSTALL_EXPORT_NAME@.cmake")
+  INCLUDE("@VTK_INSTALL_EXPORT_NAME@")
+ENDIF(NOT VTK_INSTALL_EXPORT_NAME AND EXISTS "@VTK_INSTALL_EXPORT_NAME@.cmake")
 
 # The old, less clear name for VTK_RUNTIME_LIBRARY_DIRS.  Kept here
 # for compatibility.
