--- a/Utilities/LastConfigureStep/CMakeLists.txt
+++ b/Utilities/LastConfigureStep/CMakeLists.txt
@@ -10,8 +10,8 @@
 
 #-----------------------------------------------------------------------------
 GET_PROPERTY(VTK_TARGETS GLOBAL PROPERTY VTK_TARGETS)
-EXPORT(TARGETS ${VTK_TARGETS} FILE ${VTK_BINARY_DIR}/VTKTargets.cmake)
-INSTALL(EXPORT VTKTargets DESTINATION ${VTK_INSTALL_LIB_DIR_CM24})
+EXPORT(TARGETS ${VTK_TARGETS} FILE ${VTK_BINARY_DIR}/${VTK_INSTALL_EXPORT_NAME}.cmake)
+INSTALL(EXPORT ${VTK_INSTALL_EXPORT_NAME} DESTINATION ${VTK_INSTALL_LIB_DIR_CM24})
 
 #-----------------------------------------------------------------------------
 # Create the VTKConfig.cmake file containing the VTK configuration.
