BUG: Use the VTK_EXPORTS_FILE variable.
The variable was being populated, but not used. This fixed my issues
linking to VTK from an external project.

--- a/VTKConfig.cmake.in
+++ b/VTKConfig.cmake.in
@@ -217,9 +217,9 @@ SET(VTK_CONFIGURATION_TYPES @VTK_CONFIGURATION_TYPES_CONFIG@)
 SET(VTK_BUILD_TYPE @VTK_BUILD_TYPE_CONFIG@)
 
 # The VTK targets file.
-IF(NOT VTK_INSTALL_EXPORT_NAME AND EXISTS "@VTK_INSTALL_EXPORT_NAME@.cmake")
-  INCLUDE("@VTK_INSTALL_EXPORT_NAME@")
-ENDIF(NOT VTK_INSTALL_EXPORT_NAME AND EXISTS "@VTK_INSTALL_EXPORT_NAME@.cmake")
+IF(NOT VTK_INSTALL_EXPORT_NAME AND EXISTS "@VTK_TARGETS_FILE@")
+  INCLUDE("@VTK_TARGETS_FILE@")
+ENDIF()
 
 # The old, less clear name for VTK_RUNTIME_LIBRARY_DIRS.  Kept here
 # for compatibility.
