BUG: Ensure the targets file is only included once.
The vtkCommon target should always exist for VTK, and so makes a good
equivalent to a header guard. Projects like Titan need this as we make
multiple find_package(VTK) calls.

--- a/VTKConfig.cmake.in
+++ b/VTKConfig.cmake.in
@@ -217,7 +217,8 @@ SET(VTK_CONFIGURATION_TYPES @VTK_CONFIGURATION_TYPES_CONFIG@)
 SET(VTK_BUILD_TYPE @VTK_BUILD_TYPE_CONFIG@)
 
 # The VTK targets file.
-IF(NOT VTK_INSTALL_EXPORT_NAME AND EXISTS "@VTK_TARGETS_FILE@")
+IF(NOT VTK_INSTALL_EXPORT_NAME AND NOT TARGET vtkCommon
+   AND EXISTS "@VTK_TARGETS_FILE@")
   INCLUDE("@VTK_TARGETS_FILE@")
 ENDIF()
 
