--- a/VTKConfig.cmake.in
+++ b/VTKConfig.cmake.in
@@ -189,7 +189,8 @@ SET(VTK_TIFF_LIBRARIES     "@VTK_TIFF_LIBRARIES@")
 SET(VTK_EXPAT_LIBRARIES    "@VTK_EXPAT_LIBRARIES@")
 SET(VTK_FREETYPE_LIBRARIES "@VTK_FREETYPE_LIBRARIES@")
 SET(VTK_LIBXML2_LIBRARIES  "@VTK_LIBXML2_LIBRARIES@")
-SET(VTK_LIBPROJ4_LIBRARIES  "@VTK_LIBPROJ4_LIBRARIES@")
+SET(VTK_LIBPROJ4_LIBRARIES "@VTK_LIBPROJ4_LIBRARIES@")
+SET(VTK_HDF5_LIBRARIES     "@VTK_HDF5_LIBRARIES@")
 
 # The VTK Qt configuration.
 IF(VTK_USE_QVTK)
