--- a/Widgets/Testing/Cxx/CMakeLists.txt
+++ b/Widgets/Testing/Cxx/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(MyTests
   TestCheckerboardWidget.cxx
   TestContourWidget2.cxx
   TestDistanceWidget.cxx
+  TestDistanceWidget3D.cxx
   TestHandleWidget.cxx
 #  TestHandleWidget2D.cxx
   TestImplicitPlaneWidget.cxx
