COMP: Do not include "vtk" in python modules install rule destination dir

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -485,7 +485,7 @@ IF(PYTHON_EXECUTABLE)
   IF(VTK_INSTALL_PYTHON_USING_CMAKE)
     # Install python module directory (*.py and *.pyd)
     INSTALL(DIRECTORY "${VTK_BINARY_DIR}/Wrapping/Python/vtk"
-      DESTINATION "${VTK_INSTALL_BIN_DIR_CM24}/Python/vtk" COMPONENT RuntimeLibraries
+      DESTINATION "${VTK_INSTALL_BIN_DIR_CM24}/Python" COMPONENT RuntimeLibraries
       USE_SOURCE_PERMISSIONS)
   ENDIF(VTK_INSTALL_PYTHON_USING_CMAKE)
 
