vtkhdf5: Add definition for VTK_USE_SYSTEM_HDF5.

--- a/vtkToolkits.h.in
+++ b/vtkToolkits.h.in
@@ -113,6 +113,7 @@
 /* Whether VTK is using its own utility libraries.  */
 #cmakedefine VTK_USE_SYSTEM_PNG
 #cmakedefine VTK_USE_SYSTEM_ZLIB
+#cmakedefine VTK_USE_SYSTEM_HDF5
 #cmakedefine VTK_USE_SYSTEM_JPEG
 #cmakedefine VTK_USE_SYSTEM_TIFF
 #cmakedefine VTK_USE_SYSTEM_EXPAT
