hdf5: Remove typo.

--- a/Resources/HDF5Config.cmake.in
+++ b/Resources/HDF5Config.cmake.in
@@ -2,7 +2,7 @@
 # HDF5 Config file for CMake
 #
 
-SET(HDF5_INCLUDE_DIRS     "@HDF5_INCLUDE_DIRECTORIES@i" )
+SET(HDF5_INCLUDE_DIRS     "@HDF5_INCLUDE_DIRECTORIES@" )
 SET(HDF5_LIBRARIES        "@HDF5_LIBRARIES@" )
 SET(HDF5_LINK_DIRECTORIES "@CMAKE_LIBRARY_OUTPUT_DIRECTORY@" )
 
