--- a/Utilities/vtkhdf5/c++/src/CMakeLists.txt
+++ b/Utilities/vtkhdf5/c++/src/CMakeLists.txt
@@ -101,7 +101,7 @@ ENDIF (NOT VTK_INSTALL_NO_DEVELOPMENT)
 #-----------------------------------------------------------------------------
 # Add Target(s) to CMake Install for import into other projects
 #-----------------------------------------------------------------------------
-IF (HDF5_EXPORTED_TARGETS)
+IF (HDF5_EXPORTED_TARGETS AND NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL (
       TARGETS
           ${HDF5_CPP_LIB_TARGET}
@@ -111,5 +111,5 @@ IF (HDF5_EXPORTED_TARGETS)
       LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
       ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development
   )
-ENDIF (HDF5_EXPORTED_TARGETS)
+ENDIF (HDF5_EXPORTED_TARGETS AND NOT VTK_INSTALL_NO_LIBRARIES)
 
