ENH: Set default build type if none specified.
Set a default build type if none was specified on platforms that use
CMAKE_BUILD_TYPE. Also populate the cache variable enum values (for
cmake-gui drop down list).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,15 @@ INCLUDE(vtkCompilerExtras)
 # Check the source tree - right now just for local Git hooks.
 INCLUDE(vtkCheckSourceTree)
 
+# Set a default build type if none was specified
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "Setting build type to 'Debug' as none was specified.")
+  set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build." FORCE)
+  # Set the possible values of build type for cmake-gui
+  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release"
+    "MinSizeRel" "RelWithDebInfo")
+endif()
+
 #-----------------------------------------------------------------------------
 # VTK version number.  An even minor number corresponds to releases.
 SET(VTK_MAJOR_VERSION 5)
