ENH: User defined range setting ability in cube axes actor
One may now explicitly specify the range of each axes that's used
to annotate the prop. This range may now be different from the
world coordinates of the prop. Thus we have separated the notion
of the bounds of the prop from the displayed range.

--- a/Hybrid/Testing/Tcl/CMakeLists.txt
+++ b/Hybrid/Testing/Tcl/CMakeLists.txt
@@ -16,6 +16,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
       clipWedge
       cubeAxes
       cubeAxes2
+      cubeAxes3
       depthSort
       earth
       imageToPolyData
