--- a/Charts/CMakeLists.txt
+++ b/Charts/CMakeLists.txt
@@ -13,7 +13,6 @@ SET(KIT_INTERFACE_LIBRARIES vtkViews)
 SET(KIT_LIBS vtkftgl)
 
 SET(Kit_SRCS
-  vtk2DHistogramItem.cxx
   vtkAbstractContextBufferId.cxx
   vtkAbstractContextItem.cxx
   vtkAxis.cxx
@@ -21,7 +20,7 @@ SET(Kit_SRCS
   vtkBrush.cxx
   vtkChart.cxx
   vtkChartLegend.cxx
-  vtkChart2DHistogram.cxx
+  vtkChartHistogram2D.cxx
   vtkChartParallelCoordinates.cxx
   vtkChartXY.cxx
   vtkChartPie.cxx
@@ -54,6 +53,7 @@ SET(Kit_SRCS
   vtkPlot.cxx
   vtkPlotBar.cxx
   vtkPlotGrid.cxx
+  vtkPlotHistogram2D.cxx
   vtkPlotLine.cxx
   vtkPlotStacked.cxx
   vtkPlotParallelCoordinates.cxx
