Added test for reading properties in vtkTulipReader.
Change-Id: I1f80c5a617be5309db788e5505568dcfdf3ee4c7

--- a/Infovis/Testing/Cxx/CMakeLists.txt
+++ b/Infovis/Testing/Cxx/CMakeLists.txt
@@ -55,6 +55,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
       TestRISReader
       TestStringToNumeric
       TestTulipReader
+      TestTulipReaderProperties
       )
   ENDIF (VTK_DATA_ROOT)
 
