Set several XMLIO tests to run serially to see if that makes them pass.

--- a/IO/Testing/Cxx/CMakeLists.txt
+++ b/IO/Testing/Cxx/CMakeLists.txt
@@ -204,6 +204,7 @@ ENDIF(VTK_USE_OGGTHEORA_ENCODER)
 IF(VTK_USE_INFOVIS)
   ADD_TEST(TestDataObjectIO ${CXX_TEST_PATH}/${KIT}CxxTests TestDataObjectIO)
   ADD_TEST(TestDataObjectXMLIO ${CXX_TEST_PATH}/${KIT}CxxTests TestDataObjectXMLIO)
+  set_tests_properties(TestDataObjectXMLIO PROPERTIES RUN_SERIAL ON)
 ENDIF(VTK_USE_INFOVIS)
 
 IF(VTK_USE_N_WAY_ARRAYS)
